--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -43,10 +43,8 @@ layout: default
         {% endif %}
         
              
-        {% if page.citation and page.paperurl %}
-          <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
-        {% elsif page.citation %}
-          <p>Recommended citation: {{ page.citation }} </p>
+        {% if page.citation %}
+          <p>Citation: {{ page.citation }} </p>
         {% endif %}
     
         </header>
