--- a/_includes/archive-single-cv.html
+++ b/_includes/archive-single-cv.html
@@ -36,7 +36,8 @@
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
-    {% if post.venue%}<p class="archive__item-excerpt" itemprop="description">{{ post.citation }}</p> {% endif %}
+    {% if post.authors %}<p class="page__meta" itemprop="description">{{post.authors}}</p>{% endif %}
+    {% if post.venue %}<p class="archive__item-excerpt" itemprop="description">{{ post.venue }}</p> {% endif %}
     </li>
  </article>
 </div>
